--- a/.installed.cfg
+++ b/.installed.cfg
@@ -3,24 +3,30 @@ installed_develop_eggs =
 parts = gae_sdk gae_tools app_lib
 
 [gae_sdk]
-__buildout_installed__ = /Users/admin/Workspace/AppEngine-Toolkit/var/parts/google_appengine
-__buildout_signature__ = appfy.recipe.gae-0.9.3-py2.7.egg z3c.recipe.scripts-1.0.1-py2.7.egg zc.buildout-1.5.2-py2.7.egg setuptools-AspuMIlDcgjO4ZZghBtedg== zc.recipe.egg-1.3.2-py2.7.egg zc.buildout-1.5.2-py2.7.egg
+__buildout_installed__ = C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\var\parts\google_appengine
+__buildout_signature__ = appfy.recipe.gae-0.9.3-py2.7.egg z3c.recipe.scripts-1.0.1-py2.7.egg zc.buildout-CTSu/Q+Aa5EkajPgpObVtw== distribute-CTSu/Q+Aa5EkajPgpObVtw== zc.recipe.egg-1.3.2-py2.7.egg zc.buildout-CTSu/Q+Aa5EkajPgpObVtw==
 clear-destination = true
-destination = /Users/admin/Workspace/AppEngine-Toolkit/var/parts
+destination = C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\var\parts
 download-only = false
 hash-name = false
 recipe = appfy.recipe.gae:sdk
 strip-top-level-dir = false
-url = http://googleappengine.googlecode.com/files/google_appengine_1.6.0.zip
+url = http://googleappengine.googlecode.com/files/google_appengine_1.7.0.zip
 
 [gae_tools]
-__buildout_installed__ = /Users/admin/Workspace/AppEngine-Toolkit/tools/bin/appcfg
-	/Users/admin/Workspace/AppEngine-Toolkit/tools/bin/bulkload_client
-	/Users/admin/Workspace/AppEngine-Toolkit/tools/bin/bulkloader
-	/Users/admin/Workspace/AppEngine-Toolkit/tools/bin/dev_appserver
-	/Users/admin/Workspace/AppEngine-Toolkit/tools/bin/remote_api_shell
-	/Users/admin/Workspace/AppEngine-Toolkit/tools/bin/python
-__buildout_signature__ = appfy.recipe.gae-0.9.3-py2.7.egg z3c.recipe.scripts-1.0.1-py2.7.egg zc.buildout-1.5.2-py2.7.egg setuptools-AspuMIlDcgjO4ZZghBtedg== zc.recipe.egg-1.3.2-py2.7.egg zc.buildout-1.5.2-py2.7.egg
+__buildout_installed__ = C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\appcfg.exe
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\appcfg-script.py
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\bulkload_client.exe
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\bulkload_client-script.py
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\bulkloader.exe
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\bulkloader-script.py
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\dev_appserver.exe
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\dev_appserver-script.py
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\remote_api_shell.exe
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\remote_api_shell-script.py
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\python.exe
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\python-script.py
+__buildout_signature__ = appfy.recipe.gae-0.9.3-py2.7.egg z3c.recipe.scripts-1.0.1-py2.7.egg zc.buildout-CTSu/Q+Aa5EkajPgpObVtw== distribute-CTSu/Q+Aa5EkajPgpObVtw== zc.recipe.egg-1.3.2-py2.7.egg zc.buildout-CTSu/Q+Aa5EkajPgpObVtw==
 extra-paths = %(__buildout_space_n__)sapp
 	app/lib
 	app/lib/dist
@@ -29,28 +35,26 @@ extra-paths = %(__buildout_space_n__)sapp
 recipe = appfy.recipe.gae:tools
 
 [app_lib]
-__buildout_installed__ = /Users/admin/Workspace/AppEngine-Toolkit/var/parts/app_lib
-	/Users/admin/Workspace/AppEngine-Toolkit/var/parts/app_lib/sitecustomize.py
-	/Users/admin/Workspace/AppEngine-Toolkit/var/parts/app_lib/site.py
-	/Users/admin/Workspace/AppEngine-Toolkit/tools/bin/pybabel
-__buildout_signature__ = appfy.recipe.gae-0.9.3-py2.7.egg z3c.recipe.scripts-1.0.1-py2.7.egg zc.buildout-1.5.2-py2.7.egg setuptools-AspuMIlDcgjO4ZZghBtedg== zc.recipe.egg-1.3.2-py2.7.egg zc.buildout-1.5.2-py2.7.egg
-_b = /Users/admin/Workspace/AppEngine-Toolkit/tools/bin
-_d = /Users/admin/Workspace/AppEngine-Toolkit/var/develop-eggs
-_e = /Users/admin/Workspace/AppEngine-Toolkit/var/eggs
+__buildout_installed__ = C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\var/parts\app_lib\sitecustomize.py
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\var/parts\app_lib\site.py
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\pybabel.exe
+	C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin\pybabel-script.py
+__buildout_signature__ = appfy.recipe.gae-0.9.3-py2.7.egg z3c.recipe.scripts-1.0.1-py2.7.egg zc.buildout-CTSu/Q+Aa5EkajPgpObVtw== distribute-CTSu/Q+Aa5EkajPgpObVtw== zc.recipe.egg-1.3.2-py2.7.egg zc.buildout-CTSu/Q+Aa5EkajPgpObVtw==
+_b = C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin
+_d = C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\var/develop-eggs
+_e = C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\var/eggs
 allowed-eggs-from-site-packages = *
-bin-directory = /Users/admin/Workspace/AppEngine-Toolkit/tools/bin
-buildout-directory = /Users/admin/Workspace/AppEngine-Toolkit
-develop-eggs-directory = /Users/admin/Workspace/AppEngine-Toolkit/var/develop-eggs
+bin-directory = C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\tools/bin
+buildout-directory = C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs
+develop-eggs-directory = C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\var/develop-eggs
 eggs = %(__buildout_space_n__)sbabel				# i8n utilities, from Edgewall Software (http://babel.edgewall.org)
-	jinja2              # templating engine, from Pocoo (http://www.pocoo.org/projects/jinja2/#jinja2)
-	webapp2				# WSGI framework, from Rodrigo Moraes (http://webapp-improved.appspot.com)
 	slimmer				# small package for minifying HTML, CSS and JS. (http://packages.python.org/slimmer)
 	gaepytz             # timezone utilities, from Rodrigo again (http://code.google.com/p/gae-pytz)
 	wtforms             # forms framework, from Simplecodes (http://wtforms.simplecodes.com/)
 	logbook             # better logging, from Pocoo (http://packages.python.org/Logbook)
-eggs-directory = /Users/admin/Workspace/AppEngine-Toolkit/var/eggs
+eggs-directory = C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\var/eggs
 exec-sitecustomize = true
-executable = /System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python
+executable = C:\Python27\python.exe
 ignore-globs = %(__buildout_space_n__)s*.c
 	*.pyc
 	*.pyo
@@ -68,7 +72,7 @@ ignore-packages = %(__buildout_space_n__)sssl
 	pkg_resources
 include-site-packages = true
 lib-directory = app/lib/dist
-parts-directory = /Users/admin/Workspace/AppEngine-Toolkit/var/parts/app_lib
+parts-directory = C:\Users\sam.MOMENTUM.000\Workspace\FatCatMap-Labs\var/parts\app_lib
 python = buildout
 recipe = appfy.recipe.gae:app_lib
 unzip = true
